<resources>
    <string name="app_name">Practice Vocabulary!</string>
    <string name="close">Close</string>
    <string name="name">Name</string>
    <string name="lesson_name">Name of lesson</string>
    <string name="language_other">Other language</string>
    <string name="language_main">Main language</string>
    <string name="next">Next</string>
    <string name="ignore_case">Ignore upper and lower case</string>
    <string name="settings">Settings</string>
    <string name="create_additional_vocabulary">Add word</string>
    <string name="err_missing_input">Error: Not all fields have been filled in !</string>
    <string name="err">Error</string>
    <string name="wrong">Wrong</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="solution">Solution:</string>
    <string name="finish_lesson">Finished lesson</string>
    <string name="plus" translatable="false">+</string>
    <string name="learn">Learn</string>
    <string name="create_new_lesson">Create new lesson</string>
    <string name="create_new_vocabulary_group">Create new vocabulary group</string>
    <string name="vocabulary_group_name">Name of vocabulary group</string>
    <string name="number_vocabulary">Number of words: %1$d</string>
    <string name="delete">Delete</string>
    <string name="practice">Practice</string>
    <string name="check">Check</string>
    <string name="translate">Translate:</string>
    <string name="translation">Translation</string>
    <string name="correct_in_percent">%1$d %%</string>
    <string name="s_continue">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="deleted_successfully">Deleted successfully</string>
    <string name="err_name_contains_wrong_letter">Error: Name contains one of the following letters: (:,\\,\\,/,|,\\?,*,>,\\u003C)</string>
    <string name="wrong_the_correct_solution_is">Wrong! The solution is \"%1$s\"</string>
    <string name="voc_in">Word in %1$s</string>
    <string name="number_voc_of_rest">Word %1$d of %2$d</string>
    <string name="streak_have_of_goal" translatable="false">" %1$d/%2$d XP"</string>
    <string name="streak_in_days">%1$d\ndays</string>
    <string name="streak_in_day">%1$d\nday</string>
    <string name="streak_left_to_do_for_next_day">You are still missing %1$d XP to your %2$d days streak</string>
    <string name="streak_reached_goal">You have reached your goal today !</string>
    <string name="xp_reached" translatable="false">+%1$d XP</string>
    <string name="import_lesson">Import from file</string>
    <string name="err_could_not_import_lesson">Error: Lesson could not be created !</string>
    <string name="import_lesson_successful">New lesson successfully imported!</string>
    <string name="err_no_permission">Error: No permission!</string>
    <string name="import_">import</string>
    <string name="err_name_too_long_max">Error: Name too long ! (max. %1$d characters)</string>
    <string name="streak" translatable="false">Streak</string>
    <string name="settings_main_daily_xp_objective">Daily goal</string>
    <string name="app_version" translatable="false">Version: %1$s</string>
    <string name="app_icon">App Icon</string>
    <string name="manage_vocabulary_groups">Manage vocabulary groups</string>
    <string name="developed_by_luki2811">Developed by Luki2811</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="remove_vocabularyWord">Remove word</string>
    <string name="save">Save</string>
    <string name="err_could_not_delete_vocabulary_group">Error: Could not delete vocabulary group</string>
    <string name="do_you_really_want_to_delete_vocabulary_group">Do you really want to delete this vocabulary group?</string>
    <string name="delete_vocabulary_group">Delete vocabulary group</string>
    <string name="cancelled">Cancelled !</string>
    <string name="vocabulary_groups">Vocabulary groups</string>
    <string name="err_could_not_import_vocabulary_group">Error: Could not import vocabulary group !</string>
    <string name="add">Add</string>
    <string name="delete_lesson">Delete lesson</string>
    <string name="do_you_really_want_to_delete_lesson">Do you really want to delete the lesson \"%1$s\" ?</string>
    <string name="loading_data">Load data</string>
    <string name="manage">Manage</string>
    <string name="saved">Saved !</string>
    <string name="reset">Reset</string>
    <string name="err_not_enough_words">Error: Too few words ! (min. 10)</string>
    <string name="do_you_really_want_to_leave_practice">Do you really want to leave the lesson ??</string>
    <string name="quite_lesson">Quite lesson</string>
    <string name="quite">Quite</string>
    <string name="yes">Yes</string>
    <string name="settings_lesson_read_out_both">Read out only new words</string>
    <string name="to_finish">Finish</string>
    <string name="correct_answer">Correct answer: %1$s</string>
    <string name="leave">Leave</string>
    <string name="look_for_case">Note the upper and lower case !</string>
    <string name="word_previous_mistake">Previous mistake</string>
    <string name="ok">OK</string>
    <string name="err_lesson_enough_words_long">The selected vocabulary group(s) contains less (filtered) vocabulary than the number of tasks. Add more vocabulary groups, expand your selected vocabulary groups or change your filter and try again!</string>
    <string name="import_from_internet">Import from url</string>
    <string name="import_from_qr_code">Import from QR-code</string>
    <string name="import_from_file">Import from file</string>
    <string name="file">File</string>
    <string name="url">URL</string>
    <string name="qr_code">QR-code</string>
    <string name="import_from">Import from:</string>
    <string name="url_of_file_to_import">URL to import</string>
    <string name="action_import">Import</string>
    <string name="err_cant_parse_to_URL">Error: No valid URL</string>
    <string name="err_cant_find_URL">Error: URL could not be found</string>
    <string name="err_URL_has_no_content">Error: URL has no content</string>
    <string name="download_started">Download started !</string>
    <string name="settings_lesson_ask_only_new_words">Ask for new words only</string>
    <string name="vocabulary_group_restart">Vocabulary group starts again</string>
    <string name="type_of_lesson_1">Write translation</string>
    <string name="type_of_lesson_2">Choose between three words</string>
    <string name="type_of_lesson_3">Match five words</string>
    <string name="settings_types_of_lesson">Types of exercises</string>
    <string name="err_need_one_type_of_lesson">Error: At least one type of exercises is needed</string>
    <string name="settings_main_read_out_forbidden_central">Centrally deactivate read out vocabulary</string>
    <string name="warning">Warning!</string>
    <string name="warning_lose_of_progress">If you change your streak goal, then today could be removed…</string>
    <string name="open_source_licences">Open-Source licences</string>
    <string name="name_of_imported_vocabulary_group">Name of imported vocabulary group</string>
    <string name="tts_settings">Settings for reading</string>
    <string name="err_no_internet_connection">Error: No Internet connection</string>
    <string name="download_successfully">Download successful</string>
    <string name="settings_enable_dynamic_colors">Use Dynamic Colors</string>
    <string name="info">Information</string>
    <string name="info_need_to_restart_app_to_see_change">The app must be restarted that the change can be applied</string>
    <string name="translate_in_lang">Translate to %1$s</string>
    <string name="speak_again">speak again</string>
    <string name="find_fitting_words">Find the matching word pairs</string>
    <string name="err_lang_not_available">Error: Language not available</string>
    <string name="type_of_lesson">Type of lesson: %1$s</string>
    <string name="mistake">Mistake</string>
    <string name="overview">Overview</string>
    <string name="err_unknown_type">Error: Unknown type</string>
    <string name="channel_name_streak">Streak</string>
    <string name="channel_description_streak">All notifications around the Streak</string>
    <string name="settings_reminder_streak">Streak reminder</string>
    <string name="pick_time">Choose time</string>
    <string name="when_do_you_want_to_be_remembered">When do you want to be remembered ??</string>
    <string name="err_no_permission_reminder">Error: No permission to create a reminder at the selected specific time.</string>
    <string name="mistakes_overview">Overview of mistakes</string>
    <string name="finish">Finish</string>
    <string name="practice_mistakes">Practice mistakes</string>
    <string name="create_lesson_or_vocabulary_group">Create or import a lesson or a vocabulary group. Tap on \"+\" to start.</string>
    <string name="number_of_exercises">Number of exercises</string>
    <string name="correct_in_row">%1$d in a row correct</string>
    <string name="number_of_mistakes">Number of mistakes: %1$d</string>
    <string name="language">Language</string>
    <string name="start">Start</string>
    <string name="last_time_wrong">Last time wrong: %1$s</string>
    <string name="q_start_import">Do you want to start the import of %1$s ??</string>
    <string name="err_import_failed">Error: Import failed</string>
    <string name="err_device_offline">Error: Device is offline</string>
    <string name="err_file_not_found">Error: File not found</string>
    <string name="create">Create</string>
    <string name="choose_file">Choose a file</string>
    <string name="download">Download</string>
    <string name="scanner">Scanner</string>
    <string name="gallery">Gallery</string>
    <string name="click_to_continue">Click on button to continue</string>
    <string name="create_vocabulary_group_from_picture">Create vocabulary group from image</string>
    <string name="choose_image">Choose an image</string>
    <string name="create_vocabulary_group_from_image_step_1">Choose the photo with the vocabulary list.  <b>Important</b>: The vocabulary has to be structured in a list!</string>
    <string name="create_vocabulary_group_from_image_step_2">Choose import mode:\n<b>Mode 1</b>: For pages with larger distance between each vocabulary word AND words over one or several line(s)\n<b>Mode 2</b>: For pages with smaller distance between each vocabulary word AND words over one line (Use xCut)\n<b>Notice</b>: Both need a good large distance between the two columns in each line</string>
    <string name="create_vocabulary_group_from_image_step_3">Set xCut (blue line)\nAll <i>known</i> words have to start <b>before</b> the blue line and\nall <i>new</i> words have to start <b>after</b> the blue line</string>
    <string name="create_vocabulary_group_from_image_step_4">Set further settings:\n<b>Remove points</b>:\ne.g. \"all of…\" to \"all of\"\n<b>Correct words</b>: Try to fix common extraction mistakes\ne.g. \"|e\" to \"le\" or \"Cto)\" to \"(to)\"\n<b>Has title</b>: Use first paragraph as name of vocabulary group</string>
    <string name="reload_x_cut">Reload xCut</string>
    <string name="remove_points">Remove points</string>
    <string name="to_correct_words">Correct words</string>
    <string name="has_title">Has title</string>
    <string name="mode_1">Mode 1</string>
    <string name="mode_2">Mode 2</string>
    <string name="take_photo">Take photo</string>
    <string name="xp" translatable="false">%1$dXP</string>
    <string name="general">General</string>
    <string name="search">Search</string>
    <string name="word_already_in_vocabulary_group">Word already in vocabulary group</string>
    <string name="lesson_request_all_possible_answer">Have to answer all possible answers</string>
    <string name="settings_lesson_read_out">Read out…</string>
</resources>