<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.create.CreateVocabularyGroupWithImageInfoFragment">

            <TextView
                android:id="@+id/textViewCreateVocabularyGroupFromPictureStep1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/create_vocabulary_group_from_image_step_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCreateVocabularyGroupFromPictureChooseImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/choose_image"
                app:layout_constraintEnd_toStartOf="@+id/buttonCreateVocabularyGroupFromImageTakePhoto"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCreateVocabularyGroupFromPictureStep1" />

            <Button
                android:id="@+id/buttonCreateVocabularyGroupFromImageTakePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_photo"
                app:layout_constraintBottom_toBottomOf="@+id/buttonCreateVocabularyGroupFromPictureChooseImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/buttonCreateVocabularyGroupFromPictureChooseImage"
                app:layout_constraintTop_toTopOf="@+id/buttonCreateVocabularyGroupFromPictureChooseImage" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/dividerCreateVocabularyGroupFromPictureStep1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonCreateVocabularyGroupFromPictureChooseImage" />

            <TextView
                android:id="@+id/textViewCreateVocabularyGroupFromPictureStep2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/create_vocabulary_group_from_image_step_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerCreateVocabularyGroupFromPictureStep1" />

            <RadioGroup
                android:id="@+id/radioGroupCreateVocabularyGroupFromPicture"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCreateVocabularyGroupFromPictureStep2">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButtonCreateVocabularyGroupFromPicture1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/mode_1"
                    app:useMaterialThemeColors="true" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButtonCreateVocabularyGroupFromPicture2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/mode_2"
                    app:useMaterialThemeColors="true" />

            </RadioGroup>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/dividerCreateVocabularyGroupFromPictureStep2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupCreateVocabularyGroupFromPicture" />

            <TextView
                android:id="@+id/textViewCreateVocabularyGroupFromPictureStep3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/create_vocabulary_group_from_image_step_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerCreateVocabularyGroupFromPictureStep2" />

            <ImageView
                android:id="@+id/imageViewCreateVocabularyGroupFromPicturePreview"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCreateVocabularyGroupFromPictureStep3"
                tools:src="@tools:sample/backgrounds/scenic" />

            <com.google.android.material.slider.Slider
                android:id="@+id/sliderCreateVocabularyGroupFromPictureXCut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:stepSize="1"
                app:layout_constraintEnd_toEndOf="@+id/imageViewCreateVocabularyGroupFromPicturePreview"
                app:layout_constraintStart_toStartOf="@+id/imageViewCreateVocabularyGroupFromPicturePreview"
                app:layout_constraintTop_toBottomOf="@+id/imageViewCreateVocabularyGroupFromPicturePreview" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCreateVocabularyGroupFromPictureXCut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"
                android:text="@string/reload_x_cut"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sliderCreateVocabularyGroupFromPictureXCut" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/dividerCreateVocabularyGroupFromPictureStep3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonCreateVocabularyGroupFromPictureXCut" />

            <TextView
                android:id="@+id/textViewCreateVocabularyGroupFromPictureStep4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/create_vocabulary_group_from_image_step_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerCreateVocabularyGroupFromPictureStep3" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchCreateVocabularyGroupFromPictureDots"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/remove_points"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCreateVocabularyGroupFromPictureStep4" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchCreateVocabularyGroupFromPictureAutoCorrectWords"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/to_correct_words"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchCreateVocabularyGroupFromPictureDots" />


            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchCreateVocabularyGroupFromPictureTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/has_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchCreateVocabularyGroupFromPictureAutoCorrectWords" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/dividerCreateVocabularyGroupFromPictureStep4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchCreateVocabularyGroupFromPictureTitle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCreateVocabularyGroupFromPictureStart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerCreateVocabularyGroupFromPictureStep4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>



